adjust class names of carousel

--- a/templates/generators/at_random.html
+++ b/templates/generators/at_random.html
@@ -14,7 +14,7 @@
 
 <!-- Begin Carousel code -->
   <div class="carousel">
-    <div class="carousel_slider">
+    <div class="slider">
         {% for card in cards %}
         <div class="slide">
               <img src="{{ card.tarot_card_image }}" alt="tarot key" draggable="false" />
