--- a/templates/generators/at_random.html
+++ b/templates/generators/at_random.html
@@ -3,19 +3,23 @@
 {% load static %}
 
 {% block extra_head %}
-<link rel="stylesheet" href="{% static 'css/random-normalize.css' %}">
-<link rel="stylesheet" href="{% static 'css/random-main.css' %}">
-<!-- Begin carousel includes -->
-<link rel="stylesheet" href="{% static 'css/carousel.css' %}">
-<script src="{% static 'js/carousel.js' %}" defer></script>
-<!-- End carousel includes -->
+  <link rel="stylesheet" href="{% static 'css/random-normalize.css' %}">
+  <link rel="stylesheet" href="{% static 'css/random-main.css' %}">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+  <style> /*img#no-shadow,#squad_grey {
+     box-shadow:none;
+     }*/
+  </style>
+  <!-- Begin carousel includes -->
+  <link rel="stylesheet" href="{% static 'css/carousel.css' %}">
+  <script src="{% static 'js/carousel.js' %}" defer></script>
+  <!-- End carousel includes -->
 {% endblock %}
-{% block content %}
 
-
+{% block content %}    
 <!-- Begin Carousel code -->
   <div class="carousel">
-    <div class="carousel_slider">
+    <div class="slider">
         {% for card in cards %}
         <div class="slide">
               <img src="{{ card.tarot_card_image }}" alt="tarot key" draggable="false" />
@@ -25,96 +29,105 @@
   </div>
 
 <!-- End Carousel code-->
+  {% comment %} <a class="btn third random-card">Pull Card At Random</a> {% endcomment %}
 
-{% comment %} <a class="btn third random-card">Pull Card At Random</a> {% endcomment %}
-{% if next_card_number %}
-<a href="{{next_card_number}}" class="btn third" style="
-      width: 40%;
-      display:flex;
-      justify-content:center;
-      align-items:center;
-    ">Pull Card At Random</a>
-{% endif %}
+  {% if next_card_number %}
 
+    <a href="{{next_card_number}}" class="btn third">Pull Card At Random</a>
 
-{% if generator %}
-<div class="wrapper star">
-  <section class="general">
+  {% endif %}
 
-    <h1 class="key">Card {{ generator.number }}: {{ generator.title }} </h1>
+  {% if generator %}
+
+      <div class="key">
+
+        <section class="general">
+
+          <h1>Card {{ generator.number }}: {{ generator.title }} </h1>
 
 
-    <img src="{{ generator.tarot_card_image }}" alt="tarot key" />
+          <img src="{{ generator.tarot_card_image }}" alt="tarot key" />
 
-    <ul class="esoteric-attributes">
-      <li>Astrological Attribute: {{ generator.astrological }}</li>
-      <li>Alchemical Attribute: {{ generator.alchemical }}</li>
-      <li>Intelligence: {{ generator.intelligence }} </li>
-      <li>Hebrew Letter: {{ generator.hebrew_letter }}</li>
-      <li>Letter Meaning: {{ generator.letter_meaning }}</li>
-    </ul>
+          <ul class="esoteric-attributes">
+            <li>Astrological Attribute: {{ generator.astrological }}</li>
+            <li>Alchemical Attribute: {{ generator.alchemical }}</li>
+            <li>Intelligence:  {{ generator.intelligence }} </li>
+            <li>Hebrew Letter:  {{ generator.hebrew_letter }}</li>
+            <li>Letter Meaning: {{ generator.letter_meaning }}</li>
+          </ul>
 
-    <ul class="esoteric-attributes">
-      <li> <strong>Mode</strong>: <button class="regular-btn btn-xs btn-danger">Regular</button> or <button
-          class="study-btn btn-xs btn-danger">Study</button></li>
-    </ul>
+          <ul class="esoteric-attributes"> 
+            <li> <strong>Mode</strong>: 
+            <button class="regular-btn btn-xs btn-danger">Regular</button> or <button  class="study-btn btn-xs btn-danger">Study</button>
+            </li>
+          </ul>
 
-    <p>{{ generator.description|safe }} </p>
+        </section>  <!-- end general -->
 
-  </section> <!-- end general -->
+          <p class="content animated rubberBand">{{ generator.description|safe }} </p>
+          
+          <ul class="bullets">
+              {% for point in generator.description_to_bullet %}
+                <li>{{point}}</li>
+              {% endfor %}
+          </ul> 
 
-  <h1 class="key">Select your narrative:</h1>
+        <h1>Select your narrative:</h1>
 
-  <ul class="flex-container" style={{"margin-bottom:13rem;"}}>
-    <li class="flex-item" onclick="galileoImg()"><img src="{% static 'img/GG-cropped.jpg' %}" alt="narrative"> <br />
-      Galileo</li>
-    <li class="flex-item" onclick="flossImg()"><img src="{% static 'img/hacker-white.gif' %}" alt="narrative"> <br />
-      FLOSS</li>
-    <li class="flex-item" onclick="stPaulImg()"><img src="{% static 'img/Paul.gif' %}" alt="narrative"> <br /> St Paul
-    </li>
-  </ul>
-  <br>
-  <div class="profile-left" id="galileo-content">
-    <h1>Galileo</h1>
-    <p class="content"> {{ generator.galileo_content|safe }} </p>
-    <ul class="bullets">
-      {% for point in generator.galileo_to_bullet %}
-      <li>{{point}}</li>
-      {% endfor %}
-    </ul>
-  </div>
-  {% comment %} {{ generator.galileo_bullets|safe }} {% endcomment %}
+        <ul class="flex-container">
 
-  <div class="profile-right" id="f-loss-content">
-    <h1>F/LOSS</h1>
-    <p class="content">{{ generator.f_loss_content|safe }}</p>
-    <ul class="bullets">
-      {% for point in generator.f_loss_to_bullet %}
-      <li>{{point}}</li>
-      {% endfor %}
-    </ul>
-  </div>
+          <li class="flex-item" onclick="galileoImg()"><img 
+           src="{% static 'img/GG-cropped.jpg' %}" alt="narrative"> <br /> Galileo</li>
 
-  <div class="profile-right" id="st-paul-content">
-    <h1>St. Paul</h1>
-    <p class="content">{{ generator.st_paul_content|safe }}</p>
-    <ul class="bullets">
-      {% for point in generator.paul_to_bullet %}
-      <li>{{point}}</li>
-      {% endfor %}
-    </ul>
-  </div>
-  </section>
-</div> <!-- end wrapper star -->
-{% endif %}
-// Temp disable broken script
-{% comment %} <script>
-  if (window.location.pathname.split('/')[2] === "") {
-    history.pushState("", "", {
-      {
-        generator.number
-      }
-    });
-  }
-</script> {% endcomment %}
+          <li class="flex-item" onclick="flossImg()"><img 
+           src="{% static 'img/hacker-white.gif' %}" alt="narrative"> <br /> FLOSS</li>
+         
+          <li class="flex-item" onclick="stPaulImg()"><img
+           src="{% static 'img/Paul.gif' %}" alt="narrative"> <br /> St Paul</li>
+
+        </ul>
+
+          <div id="galileo-content" class="narrative-h1s"> 
+            <h1 class="narrative-h1s fadeInLeftBig">Galileo</h1>
+            <p class="content animated fadeInLeftBig"> {{ generator.galileo_content|safe }} </p>
+            <ul class="bullets">
+              {% for point in generator.galileo_to_bullet %}
+                <li>{{point}}</li>
+              {% endfor %}
+            </ul>  
+          </div><!-- end  galileo-content -->
+
+          {% comment %} {{ generator.galileo_bullets|safe }} {% endcomment %}
+
+          <div id="f-loss-content"> 
+            <h1 class="narrative-h1s fadeInLeftBig">F/LOSS</h1>
+            <p class="content animated fadeInLeftBig">{{ generator.f_loss_content|safe }}</p>
+            <ul class="bullets">
+              {% for point in generator.f_loss_to_bullet %}
+                <li>{{point}}</li>
+              {% endfor %}
+            </ul> 
+          </div> <!-- end  f-loss-content -->
+
+          <div id="st-paul-content"> 
+            <h1 class="narrative-h1s fadeInLeftBig">St. Paul</h1>
+            <p class="content animated fadeInLeftBig">{{ generator.st_paul_content|safe }}</p>        
+              <ul class="bullets">
+              {% for point in generator.paul_to_bullet %}
+                <li>{{point}}</li>
+              {% endfor %}
+            </ul>        
+          </div> <!-- end  st-paul-content -->
+
+        </section>
+
+      </div> <!-- end wrapper star -->
+  {% endif %} 
+
+<script>
+if(window.location.pathname.split('/')[2] === ""){
+  history.pushState("","",{{generator.number}});
+}
+</script>
+
 {% endblock %}
