--- a/tarot_juicer/static/css/random-main.css
+++ b/tarot_juicer/static/css/random-main.css
@@ -524,7 +524,7 @@ dl {
 
 img {
   width: 100px;
-  box-shadow: 0 0 10px white, 0 0 20px white, 0 0 30px white;
+  /*box-shadow: 0 0 10px white, 0 0 20px white, 0 0 30px white;*/
 }
 
 #no-shadow {
