Replace bootstrap, jquery static files with CDN

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,13 +10,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <!-- Bootstrap -->
-  <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 
   <!-- Custom -->
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="{% static 'css/all.css' %}">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.3.1/css/all.css">
   
   <!-- For at_random/about/essay content -->
   {% block extra_head %}{% endblock %}
@@ -44,10 +44,8 @@
   <!-- Footer -->
   {% include 'partials/_footer.html' %}
 
-<!--   <script src="js/scripts.js"></script> -->
-  <script src="{% static 'js/jquery-3.3.1.min.js' %} "></script>
-  <script src="{% static 'js/bootstrap.bundle.min.js' %} "></script>
-  <script src="{% static 'js/lightbox.min.js' %} "></script>
+  <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>  
   <script src="{% static 'js/main.js' %} "></script>
   <script src="{% static 'js/at_random.js' %} "></script>
 </body>
