Add second button

--- a/tarot_juicer/static/css/random-main.css
+++ b/tarot_juicer/static/css/random-main.css
@@ -447,7 +447,7 @@ h1,
   font-weight: 400;
   line-height: 1;
   margin: 20px;
-  padding: 1.2em 2.8em;
+  padding: 2%;
   text-decoration: none;
   text-align: center;
   text-transform: uppercase;
