--- a/templates/generators/at_random.html
+++ b/templates/generators/at_random.html
@@ -14,15 +14,19 @@
 
 {% block content %}    
 
-  {% comment %} <a class="btn third random-card">Pull Card At Random</a> {% endcomment %}
+  <div id="centered-buttons">
 
-  {% if next_card_number %}
-
-    <a href="{{next_card_number}}" class="btn third">Pull Card At Random</a>
-
-  {% endif %}
-
-  <a href="#" class="btn third">Choose card from album</a>
+    <div class="btn third">
+      {% if next_card_number %}
+        <a href="{{next_card_number}}">Pull Card At Random</a>
+      {% endif %}
+    </div> <!-- end btn third -->
+    
+    <div class="btn third">
+      <a href="#">Choose card from album</a>
+    </div> <!-- end btn third -->
+    
+  </div>
 
   {% if generator %}
 
