Describe purpose and future work to be done

--- a/templates/essays/slashdot.html
+++ b/templates/essays/slashdot.html
@@ -1,18 +1,3 @@
-<!-- 
-
-This template will house tarot analysis (Galileo, F/LOSS) in long form with curated list of 5-7 of the very best tarot keys with:
-
-- introduction (essays Model)
-- description (generators Model)
-- tarot_card_image (generators Model) (formatted off to the side)
-- galileo_content (generators Model)
-- f_loss_content (generators Model)
-- conclusion  (essays Model)
-
-And without any other instances
-
--->
-
 {% extends 'base.html' %}
 
 {% load static %}
@@ -27,10 +12,24 @@ And without any other instances
     
     {% for article in articles %}
 
-        <h1>{{ article.title }}</h1>
-        <p>{{ article.introduction }}</p>
-        <!-- curated list of 7 tarot cards and corresponding galileo/f_loss content with images -->
-        <p>{{ article.conclusion }}</p>
+        <h1> {{ article.title }} </h1>
+        
+        <p> {{ article.introduction }} </p>
+        
+        <!-- 
+        
+        [ curated list of arbirtrary number of tarot cards and corresopnding objects ranked according to: ‘slashdot_position’ object ]
+        
+        Corresponding objects to show:
+        - 'tarot_card_image'
+        - 'description'
+        - 'galileo_content'
+        - 'f_loss_content'
+        
+        -->
+
+        <p> {{ article.conclusion }} </p>
+
     {% endfor %}
 
   {% endif %}
