--- a/templates/essays/watchtower.html
+++ b/templates/essays/watchtower.html
@@ -27,10 +27,24 @@ And without any other instances/objects
     
     {% for article in articles %}
 
-        <h1>{{ article.title }}</h1>
-        <p>{{ article.introduction }}</p>
-        <!-- curated list of 7 tarot cards and corresponding st_paul content with images -->
-        <p>{{ article.conclusion }}</p>
+        <h1> {{ article.title }} </h1>
+
+        <p> {{ article.introduction|safe }} </p>
+
+        <!-- 
+        
+        [ curated list of arbirtrary number of tarot cards and corresopnding objects ranked according to: ‘watchtower_position’ object ]
+        
+        Corresponding objects to show:
+        - 'tarot_card_image'
+        - 'description'
+        - 'st_paul_contents'
+        
+        -->
+        
+        
+        <p> {{ article.conclusion|safe }} </p>
+
     {% endfor %}
 
   {% endif %}
