Add dynamic link reference to Watchtower + Slashdot

--- a/templates/landings/portal.html
+++ b/templates/landings/portal.html
@@ -167,13 +167,13 @@ h2 {color: white;}
     <center><img width="15%" src="{% static 'img/compass1-black-with-blur4.png' %}"></center>
 
     <!-- To F/LOSS/GG index.html export:  -->
-    <h3><a href="#">@ SLASHDOT</a></h3> 
+    <h3><a href="{% url 'slashdot' %}">@ SLASHDOT</a></h3> 
     
     <!-- To Forrest Gump article:  -->
     <h3><a href="#">@ HOLLYWOOD</a></h3> 
     
     <!-- To St Paul index.html export:  -->
-    <h3><a href="#">@ THE WATCHTOWER</a></h3> 
+    <h3><a href="{% url 'watchtower' %}">@ THE WATCHTOWER</a></h3> 
     
     <!-- + Alex Jones article:  -->
     <h3><a href="#">@ AMERIKA</a></h3> 
