--- a/templates/essays/slashdot.html
+++ b/templates/essays/slashdot.html
@@ -9,28 +9,27 @@
 {% block content %}    
 
   {% if articles %}
-    
-    {% for article in articles %}
 
         <h1> {{ article.title }} </h1>
         
         <p> {{ article.introduction }} </p>
         
-        <!-- 
-        
-        [ curated list of arbirtrary number of tarot cards and corresopnding objects ranked according to: ‘slashdot_position’ object ]
-        
-        Corresponding objects to show:
-        - 'tarot_card_image'
-        - 'description'
-        - 'galileo_content'
-        - 'f_loss_content'
-        
-        -->
+          {% for article in articles %}
+
+              <!-- 
+              
+              [ curated list of arbirtrary number of tarot cards and corresopnding objects ranked according to: ‘slashdot_position’ object ]
+              
+              Corresponding objects to show:
+              - 'article.tarot_card_image'
+              - 'article.description'
+              - 'article.galileo_content'
+              - 'article.f_loss_content'
+              
+              -->
+          {% endfor %}
 
         <p> {{ article.conclusion }} </p>
-
-    {% endfor %}
 
   {% endif %}
 
