--- a/templates/work_orders/second_work_order.html
+++ b/templates/work_orders/second_work_order.html
@@ -13,10 +13,10 @@
 			   }
 
 			body {
-				width: 500px;
+				width: 600px;
 				margin: 50px auto;
 				font-family: 'Raleway', Helvetica, Arial;
-				padding-top:150px;
+				padding-top: 50px;
 			    }
 			
 			a {
@@ -60,62 +60,73 @@
 </li>
 
 <li class="orders"><!-- 3 --> 
-With Django/Jinja/Python (no JS): write a feature that can “export” the essay html template (along with CSS and client side JS static files) and splice everything  into single index.html for these templates: 
+With Django/Jinja/Python (no JS):  For this feature, the Admin user will be able to click a  button to  “export” some of my HTML templates (along with all style sheets and client side JS static files) and splice everything into single index.html file. The JS and CSS should be spliced into the header in a single web page. <em>The end goal / purpose for this task here is to have a fully functional 'index.html' for  each app article so that you can download them them in a web browser locally offline while retaining the content and form</em>. 
     <ul>
-        <li>slashdot.html, watchtower.html </li>
-        <li><span class="highlightme">pull all class objects in the database and dump them into a single template</span></li>
+        <li>I created a new template called 'all_at_random_content_dump.html' for generators app.  The purpose of this template is to gather or collect all Generator content, loop through each class object and pull each of them (there will be 22 entries in production) and dump EVERYTHING into this template in ascending order according to 'generator.number'. </li>
+        <li>Do the same for these two other templates: slashdot.html, watchtower.html. For watchtower.html, you'll need to pull: 
+         <ul>
+            <li>'article.tarot_card_image'</li>
+            <li>'article.description'</li>
+            <li>'article.st_paul_contents'</li>
+         </ul>
+        And for slashdot.html, you'll need to pull:
+         <ul>
+            <li>'article.tarot_card_image'</li>
+            <li>'article.description'</li>
+            <li>'article.galileo_content'</li>
+            <li>'article.f_loss_content'</li>
+        </ul>
+        </li>
     </ul>
-    The end goal for this task here is to have a fully functional 'index.html' for these essay articles so that you can load them in a web browser locally while retaining the content and form.
+    
 </li>
 
 <li class="orders"><!-- 4 --> 
-Using Django/Jinja: let string entered inside ‘web_address’ object (for EssayArticle) by admin user to distinguish it from the other essay articles and reflect inside web address so that http://localhost:8000/article/ [web_address_name  string specified by user goes here with spaces replaced by underscores]
+Using Django/Jinja: let string entered inside ‘web_address’ object (for EssayArticle) by admin user to distinguish it from the other essay articles and reflect inside web address so that it will be located at  http://localhost:8000/article/< web_address_name >.  The web_address_name will be a string entered by the admin user in the Dashboard. If the admin enters spaces as part of the article title, the spaces will be replaced by underscores in the web address bar.
 </li>
 
 <li class="orders"><!-- 5 --> 
-HTML: generators app: inside at_random.html: rewrite anchor tags for the buttons using HTML < button > elements instead of the current < div > and < a href=”” >< /a>
+HTML: generators app: inside at_random.html: rewrite anchor tags for the 2 buttons (lines 129-141) using HTML < button > elements (instead of the current < div > and < a href=”” >< /a>).
 </li>
 <li class="orders"><!-- 6 --> 
-CSS/JS: For square GG/FLOSS/St_Paul img’s (in at_random.thml template), show white box shadow (glow, like with the main tarot card at the center at the top of the webpage) but only when toggled.
+CSS/JS: For square GG/FLOSS/St_Paul img’s (in at_random.thml template), show white box shadow (glow, like with the main tarot card at the center at the top of the webpage) <em>but only when toggled</em>.
     <ul>
         <li>Note: I understand that this probably cannot be achieved with Jinja/Python/CSS, so you can go ahead and use JS</li>
+        <li>The CSS declaration you'll need is: `box-shadow: 0 0 10px white, 0 0 20px white, 0 0 30px white;`</li>
     </ul>
-
 </li>
+
 <li class="orders"><!-- 7 --> 
 CSS/Bootstrap: See navbar features <a href="https://imgur.com/a/DjexI8c">here</a>. Port these features (at narrower resolutions) to my tarot_juicer navbar:
   <ul>
     <li>Rather than wrapping against left hand side of the browser window, center align menu options</li>
-    <li> Add “Close” menu option in crimson (instead of green)</li>
+    <li>Add “Close” menu option in crimson (instead of green)</li>
     <li>Show hamburger button with three horizontal bars (which are thick)</li>
+    <li>Remove crimson pentacle icon</li>
+    <!--<li></li>
     <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li></li> -->
   </ul>
 </li>
 
 <li class="orders"><!-- 8 --> 
-JS/CSS: Fix <em>BUT ALSO</em>  explain <em>WHY</em> h1 tag with class ‘fadeInLeftBig’ does not animate for GG, FLOSS, St_Paul? After explaining why, then implement the fix.
-    <ul>
-        <li>Related: When narrative content is untoggled, invoke ‘fadeInRightBig’</li>
-    </ul>
-
+JS: The default mode (for ‘regular’ vs ‘study’) currently shows both at the same time. Can you switch this so that the default is to show ‘regular’ (and not study). This would ensure that website visitors will need to actually click or tap “study” to reveal the bullet point content. To see the default,  you may need to clear your cache / experiment by opening the link in a different web browser.
 </li>
 
 <li class="orders"><!-- 9 --> 
-JS: The default mode (for ‘regular’ vs ‘study’) currently shows both at the same time. Can you switch this so that the default is to show ‘regular’ (and not study). This would ensure that website visitors will need to actually click or tap “study” to reveal the bullet point content
+CSS: When narrative content is untoggled, invoke ‘fadeInRightBig’
 </li>
 
 <li class="orders"><!-- 10 --> 
-CSS: Font Awesome: Fix <em>BUT ALSO</em> explain <em>WHY</em> the font-awesome ‘location’ icon in the _footer.html (partial) is missing.
-</li>
-<li class="orders"><!-- 11 --> 
 Where else in my codebase is the “at_random_with_number” variable? This variable is present in generators/urls.py. But where else is it located or referred to?
 </li>
-<li class="orders"><!-- 12 --> 
-At this web link: “http://127.0.0.1:8000/at_random/1 “ ...the ‘fadeInLeftBig’ animations (and other animations) don’t process. Can you fix <em>BUT ALSO</em> explain <em>WHY</em>?
 
+<li class="orders"><!-- 11 --> 
+CSS: Font Awesome: Fix <em>BUT ALSO</em> explain <em>WHY</em> the font-awesome ‘location’ icon in the _footer.html (partial) is missing.
+</li>
+
+<li class="orders"><!-- 12 --> 
+JS/CSS: Fix <em>BUT ALSO</em>  explain <em>WHY</em> h1 tag with class ‘fadeInLeftBig’ does not animate for GG, FLOSS, St_Paul? After explaining why, then implement the fix.
 </li>
 
 </ol>
