--- a/tarot_juicer/static/css/random-main.css
+++ b/tarot_juicer/static/css/random-main.css
@@ -169,7 +169,7 @@ textarea {
 
 .clearfix:before,
 .clearfix:after {
-  content: " "; /* 1 */
+  content: ' '; /* 1 */
   display: table; /* 2 */
 }
 
@@ -217,11 +217,11 @@ textarea {
   }
 
   a[href]:after {
-    content: " (" attr(href) ")";
+    content: ' (' attr(href) ')';
   }
 
   abbr[title]:after {
-    content: " (" attr(title) ")";
+    content: ' (' attr(title) ')';
   }
 
   /*
@@ -229,9 +229,9 @@ textarea {
      * or use the `javascript:` pseudo protocol
      */
 
-  a[href^="#"]:after,
-  a[href^="javascript:"]:after {
-    content: "";
+  a[href^='#']:after,
+  a[href^='javascript:']:after {
+    content: '';
   }
 
   pre {
@@ -321,7 +321,7 @@ section.general img {
   font-family: Courier, Monaco, monospace;
 }
 
-@import "compass/css3";
+@import 'compass/css3';
 
 * {
   margin: 0 auto;
@@ -450,7 +450,7 @@ h1,
   text-decoration: none;
   text-align: center;
   text-transform: uppercase;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-weight: 700;
   /*margin: 0 auto;*/
   margin-left: 20px;
@@ -513,6 +513,11 @@ img {
 
 #no-shadow {
   box-shadow: none;
+}
+
+/* Shadow on images */
+.show-img-shadow {
+  box-shadow: 0 0 10px white, 0 0 20px white, 0 0 30px white;
 }
 
 /*  ##Device = Desktops
