--- a/templates/generators/at_random.html
+++ b/templates/generators/at_random.html
@@ -16,15 +16,11 @@
 
   <div id="centered-buttons">
 
-    <div class="btn third">
       {% if next_card_number %}
-        <a href="{{next_card_number}}">Pull Card At Random</a>
+        <a href="{{next_card_number}}" class="btn third">Pull Card At Random</a>
       {% endif %}
-    </div> <!-- end btn third -->
     
-    <div class="btn third">
-      <a href="#">Choose card from album</a>
-    </div> <!-- end btn third -->
+      <a href="#" class="btn third">Choose card from album</a>
     
   </div>
 
@@ -67,14 +63,14 @@
 
         <ul class="flex-container">
 
-          <li class="flex-item" onclick="galileoImg()"><img 
-           src="{% static 'img/GG-cropped.jpg' %}" alt="narrative"> <br /> Galileo</li>
+          <li class="flex-item" onclick="galileoImg(this)"><img 
+           src="{% static 'img/GG-cropped.jpg' %}" alt="narrative" class="show-img-shadow"> <br /> Galileo</li>
 
-          <li class="flex-item" onclick="flossImg()"><img 
-           src="{% static 'img/hacker-white.gif' %}" alt="narrative"> <br /> FLOSS</li>
+          <li class="flex-item" onclick="flossImg(this)"><img 
+           src="{% static 'img/hacker-white.gif' %}" alt="narrative" class="show-img-shadow"> <br /> FLOSS</li>
          
-          <li class="flex-item" onclick="stPaulImg()"><img
-           src="{% static 'img/Paul.gif' %}" alt="narrative"> <br /> St Paul</li>
+          <li class="flex-item" onclick="stPaulImg(this)"><img
+           src="{% static 'img/Paul.gif' %}" alt="narrative" class="show-img-shadow"> <br /> St Paul</li>
 
         </ul>
 
