--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -8,8 +8,14 @@
     This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
         <br /> 
         <br /> 
-    <i class="fab fa-compass">Pulu Amsic Drive, Angeles, Pampanga, Philippines</i>
-        <br /> <br /> 
+        <div style="display:flex; justify-content:center;align-items:center">
+            <i class="fa fa-compass fa-2x" style="margin-right:10px;"></i>
+            <p style="margin-top:10px">
+                Pulu Amsic Drive, Angeles, Pampanga, Philippines
+            </p>    
+        </div>
+        
+    <br /> <br /> 
     </div>
 
 </footer>
