--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -1,11 +1,12 @@
 {% load static %}
 <nav class="navbar navbar-expand-md navbar-dark bg-primary sticky-top">
     <div class="container">
-      <a class="navbar-brand" href="{% url 'portal' %}">
+      <a class="navbar-brand d-none d-md-block" href="{% url 'portal' %}">
         <img src="{% static 'img/crimson-pentavcle-wtih-grey.gif' %}" class="logo" alt="" id="squad_grey no-shadow">
       </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup">
-        <span class="navbar-toggler-icon"></span>
+      <button class="navbar-toggler mx-auto mx-1-md" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" onclick="navbarButton(this)">
+        <span class="navbar-toggler-icon" style="font-size:1.6rem;"></span>
+        {% comment %} <span class="fa fa-times fa-3x" style="font-size:2rem;"></span> {% endcomment %}
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <ul class="navbar-nav">
