Update and clarify requirements

--- a/templates/work_orders/second_work_order.html
+++ b/templates/work_orders/second_work_order.html
@@ -91,8 +91,8 @@ With Django/Jinja/Python (no JS):  For this feature, the Admin user will be able
 </li>
 
 <li class="orders"><!-- 4 --> 
-Using Django/Jinja: let string entered inside ‘web_address’ object (for EssayArticle) by admin user to distinguish it from the other essay articles and reflect inside web address so that it will be located at  http://localhost:8000/article/< web_address_name >.  The web_address_name will be a string entered by the admin user in the Dashboard. If the admin enters spaces as part of the article title, the spaces will be replaced by underscores in the web address bar. In this way, if the title specified by the blog poster is “Tarot and Forrest Gump”, then the address needs to be: http://127.0.0.1:8000/article/tarot_and_forrest_gump/ 
-</li>
+<span class="completed">Using Django/Jinja: let string entered inside ‘web_address’ object (for EssayArticle) by admin user to distinguish it from the other essay articles and reflect inside web address so that it will be located at  http://localhost:8000/article/< web_address_name >.  The web_address_name will be a string entered by the admin user in the Dashboard. If the admin enters spaces as part of the article title, the spaces will be replaced by underscores in the web address bar. In this way, if the title specified by the blog poster is “Tarot and Forrest Gump”, then the address needs to be: http://127.0.0.1:8000/article/tarot_and_forrest_gump/ </span>
+<strong>COMPLETED 27 JANUARY</strong></li>
 
 <li class="orders"><!-- 5 --> 
 <span class="completed">HTML: generators app: inside at_random.html: rewrite anchor tags for the 2 buttons (lines 129-141) using HTML < button > elements (instead of the current < div > and < a href=”” >< /a>).
@@ -110,9 +110,9 @@ Using Django/Jinja: let string entered inside ‘web_address’ object (for Essa
 CSS/Bootstrap: See navbar features <a href="https://imgur.com/a/DjexI8c">here</a>. Port these features (at narrower resolutions) to my tarot_juicer navbar:
   <ul>
     <li><span class="completed">Rather than wrapping against left hand side of the browser window, center align menu options</span><strong>COMPLETED 25 JANUARY</strong></li>
-    <li><span class="highlightme">Add “Close” menu option in crimson (instead of green)</span></li>
-    <li><span class="highlightme">Show hamburger button with three horizontal bars (which are thicker than normal) + center align the hamburger button as well</span></li>
-    <li><span class="highlightme">Remove crimson star icon</span></li>
+    <li><span class="highlightme">Add “Close” menu option in crimson (instead of green) Just as it appears in the image linked to above</span></li>
+    <li><span class="completed">Show hamburger button with three horizontal bars (which are thicker than normal) + center align the hamburger button as well</span><strong>COMPLETED 27 JANUARY</strong></li>
+    <li><span class="completed">Remove crimson star icon</span><strong>COMPLETED 27 JANUARY</strong></li>
     <!--<li></li>
     <li></li>
     <li></li> -->
@@ -132,15 +132,15 @@ CSS: When narrative content is untoggled, invoke ‘fadeInRightBig’.  <strong>
 </li>
 
 <li class="orders"><!-- 11 --> 
-<span class="completed">CSS: Font Awesome: Fix <em>BUT ALSO</em> explain <em>WHY</em> the font-awesome ‘location’ icon in the _footer.html (partial) is missing.span><strong>COMPLETED 25 JANUARY</strong>
+<span class="completed">CSS: Font Awesome: Fix <em>BUT ALSO</em> explain <em>WHY</em> the font-awesome ‘location’ icon in the _footer.html (partial) is missing.</span><strong>COMPLETED 25 JANUARY</strong>
 </li>
 
 <li class="orders"><!-- 12 --> 
-JS/CSS: Fix <em>BUT ALSO</em>  explain <em>WHY</em> h1 tag with class ‘fadeInLeftBig’ does not animate for GG, FLOSS, St_Paul? After explaining why, then implement the fix. <strong>UPDATE 25 JANUARY: </strong> <span class="highlightme">The < h1 > tags with  `narrative-h1` classes still need to animate to match the sibling content (the paragraph tags with these class elements: `content animated fadeInLeftBig`)</span>
+<span class="completed">JS/CSS: Fix <em>BUT ALSO</em>  explain <em>WHY</em> h1 tag with class ‘fadeInLeftBig’ does not animate for GG, FLOSS, St_Paul? After explaining why, then implement the fix. <strong>UPDATE 25 JANUARY: </strong> The < h1 > tags with  `narrative-h1` classes still need to animate to match the sibling content (the paragraph tags with these class elements: `content animated fadeInLeftBig`)</span><strong>COMPLETED 27 JANUARY</strong>
 </li>
 
 <li class="orders"> <!-- 13 --> 
-JS: For the portal landing page, make red  squiggly particles grow larger and larger over the course of 1 minute until they consume the whole background screen, rendering the canvas completely red.
+<span class="highlightme">JS: For the portal landing page, make red  squiggly particles grow larger and larger over the course of 1 minute until they consume the whole background screen, rendering the canvas completely red.</span>
 </li>
 
 </ol>
