imporved portal screen and fixed minor issues

--- a/templates/landings/portal.html
+++ b/templates/landings/portal.html
@@ -225,7 +225,7 @@ h2 {color: white;}
   <script type="text/javascript">
   
 
-let max_particles = 1000;
+let max_particles = 20000;
 
 var tela = document.createElement('canvas');
 tela.width = $(window).width();
@@ -244,9 +244,9 @@ class Particle {
     this.y = $(window).height() / 2 + (Math.random() * 200 - Math.random() * 200);
     this.s = Math.random() * 1;
     this.a = 0;
-    this.w = $(window).width() * 20000;
-    this.h = $(window).height()* 20000;
-    this.radius = random > .2 ? Math.random() * 1 : Math.random() * 3;
+    this.w = $(window).width();
+    this.h = $(window).height();
+    this.radius = random > .2 ? Math.random() * 1 : Math.random() * increase_size;
     this.color = random > .2 ? "black" : "crimson";
     this.radius = random > .8 ? Math.random() * 2 : this.radius;
     this.color = random > .8 ? "black" : this.color;
@@ -288,10 +288,13 @@ class Particle {
 let particles = [];
 let init_num = popolate(max_particles);
 function popolate(num) {
+  let increase_size_by = 0;
   for (var i = 0; i < num; i++) {
     setTimeout(
     function () {
-      particles.push(new Particle(canvas, i,i*200));
+      increase_size_by = increase_size_by + 0.07
+      increase_size_by = increase_size_by > 30 ? 5 : increase_size_by 
+      particles.push(new Particle(canvas, i,increase_size_by));
     }.bind(this),
     i * 20);
   }
