--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -4,13 +4,11 @@
       <a class="navbar-brand d-none d-md-block" href="{% url 'portal' %}">
         <img src="{% static 'img/crimson-pentavcle-wtih-grey.gif' %}" class="logo" alt="" id="squad_grey no-shadow">
       </a>
-      <button class="navbar-toggler mx-auto mx-1-md" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" onclick="navbarButton(this)">
+      <button class="navbar-toggler mx-auto mx-1-md" type="button" data-toggle="collapse" id="toggler-button" data-target="#navbarNavAltMarkup" onclick="navbarButton()">
         <span class="navbar-toggler-icon" style="font-size:1.6rem;"></span>
-        {% comment %} <span class="fa fa-times fa-3x" style="font-size:2rem;"></span> {% endcomment %}
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <ul class="navbar-nav">
- {% comment %} style="display:flex;justify-content:center;align-items:center;" {% endcomment %}
           <li
             {% if '/' == request.path %}
               class="nav-item active  mx-auto"
@@ -50,7 +48,9 @@
             >
             <a class="nav-link" href="{% url 'site_map' %}">Annotated Essay List</a>
           </li>
-
+          <li class="d-lg-none d-md-none d-sm-block btn btn-lg btn-default my-0 px-4" style="background-color:crimson !important; border:none;">
+           <button data-toggle="collapse" data-target="#navbarNavAltMarkup" style="border:none;background-color:transparent; width:100%;height:100%; color:white; font-size:1.2rem; text-transform:uppercase;" type="button" onclick="navbarButton()">Close</button>
+          </li>
         </ul>        
       </div>
     </div>
