--- a/templates/generators/at_random.html
+++ b/templates/generators/at_random.html
@@ -22,7 +22,7 @@
     <div class="slider">
         {% for card in cards %}
         <div class="slide">
-              <img src="{{ card.tarot_card_image }}" alt="tarot key" draggable="false" />
+              <img src="{{ STATIC_URL }}{{ card.tarot_card_thumbnail.url }}" alt="tarot key" draggable="false" />
         </div>
         {% endfor %}
     </div>
