fixed issues realted to the stylings

--- a/templates/generators/at_random.html
+++ b/templates/generators/at_random.html
@@ -75,8 +75,8 @@
         </ul>
 
           <div id="galileo-content" class="narrative-h1s"> 
-            <h1 class="narrative-h1s animated fadeInLeftBig">Galileo</h1>
-            <p class="content animated fadeInLeftBig"> {{ generator.galileo_content|safe }} </p>
+            <h1 class="narrative-h1s animated fadeInRightBig">Galileo</h1>
+            <p class="content animated fadeInRightBig"> {{ generator.galileo_content|safe }} </p>
             <ul class="bullets">
               {% for point in generator.galileo_to_bullet %}
                 <li>{{point}}</li>
@@ -87,8 +87,8 @@
           {% comment %} {{ generator.galileo_bullets|safe }} {% endcomment %}
 
           <div id="f-loss-content"> 
-            <h1 class="narrative-h1s animated fadeInLeftBig">F/LOSS</h1>
-            <p class="content animated fadeInLeftBig">{{ generator.f_loss_content|safe }}</p>
+            <h1 class="narrative-h1s animated fadeInRightBig">F/LOSS</h1>
+            <p class="content animated fadeInRightBig">{{ generator.f_loss_content|safe }}</p>
             <ul class="bullets">
               {% for point in generator.f_loss_to_bullet %}
                 <li>{{point}}</li>
@@ -97,8 +97,8 @@
           </div> <!-- end  f-loss-content -->
 
           <div id="st-paul-content"> 
-            <h1 class="narrative-h1s animated fadeInLeftBig">St. Paul</h1>
-            <p class="content animated fadeInLeftBig">{{ generator.st_paul_content|safe }}</p>        
+            <h1 class="narrative-h1s animated fadeInRightBig">St. Paul</h1>
+            <p class="content animated fadeInRightBig">{{ generator.st_paul_content|safe }}</p>        
               <ul class="bullets">
               {% for point in generator.paul_to_bullet %}
                 <li>{{point}}</li>
