--- a/tarot_juicer/static/css/style.css
+++ b/tarot_juicer/static/css/style.css
@@ -37,7 +37,7 @@ img {
   border-radius: 5px;
 }
 #showcase .overlay {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   left: 0;
@@ -53,7 +53,7 @@ img {
   overflow: hidden;
 }
 #services::before {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   left: 0;
@@ -69,7 +69,7 @@ img {
   min-height: 200px;
 }
 #showcase-inner::before {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   left: 0;
@@ -207,4 +207,46 @@ a:hover {
 /* selected link */
 a:active {
   color: crimson;
+}
+
+#main-footer .footer-styles {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#main-footer .footer-styles {
+  margin-right: 10px;
+}
+
+#main-footer .footer-styles {
+  margin-top: 10px;
+}
+
+.custom-nav-button {
+  background-color: crimson;
+  margin-top: 10px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+  margin-bottom: 0;
+}
+
+.custom-nav-button button {
+  border: none;
+  background-color: transparent;
+  display: block;
+  height: 100%;
+  width: 100%;
+  margin: auto;
+  color: #fff;
+  outline: none;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.navbar-toggler-icon {
+  font-size: 1.5rem;
 }
