--- a/templates/generators/at_random.html
+++ b/templates/generators/at_random.html
@@ -6,9 +6,8 @@
   <link rel="stylesheet" href="{% static 'css/random-normalize.css' %}">
   <link rel="stylesheet" href="{% static 'css/random-main.css' %}">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
-  <style> /*img#no-shadow,#squad_grey {
-     box-shadow:none;
-     }*/
+  <style> 
+  
   </style>
 {% endblock %}
 
