Correct tarot card img reference

--- a/templates/essays/slashdot.html
+++ b/templates/essays/slashdot.html
@@ -22,8 +22,8 @@
               
             -->
               
-              <p> {{ article.tarot_card_image}} </p> <!-- from generators/models.py-->
-              <p> {{ article.description}} </p> <!-- from generators/models.py-->
+              <img src="{{ generator.tarot_card_image }}"/> <!-- from generators/models.py-->
+              <p> {{ article.description }} </p> <!-- from generators/models.py-->
               <p> {{ article.galileo_content }} </p><!-- from generators/models.py-->
               <p> {{ article.f_loss_content }} </p> <!-- from generators/models.py-->
                             
